--- a/lombaterbaru.html
+++ b/lombaterbaru.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgba(1, 12, 58, 0.8);;">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="img/Group 2.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"> Bagus Tours
+            <img src="img/Group 2.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"> SIULAN
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
