--- a/Tentang Kami.html
+++ b/Tentang Kami.html
@@ -73,7 +73,7 @@ Akhir Navbar-->
             <a class="nav-link" href="#">Riwayat</a>
           </li>
           <li class="nav-item">
-           <button class="btn btn-warning" type="submit">Posting</button>
+           <button class="btn btn-warning" type="submit">Unggah</button>
          </li>
           </li>
         </ul>
