--- a/home.html
+++ b/home.html
@@ -40,20 +40,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item ">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Beranda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Tentang Kami.html">About</a>
+              <a class="nav-link" href="Tentang Kami.html">Tentang kami</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Bookmark</a>
+              <a class="nav-link" href="#">Penanda</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Riwayat</a>
             </li>
             <li class="nav-item">
               <!-- <a class="nav-link" href="#">Get Started</a> -->
-              <button class="btn custom-button ms-3" type="submit">Posting</button>
+              <button class="btn custom-button ms-3" type="submit">Unggah</button>
             </li>
             </li>
           </ul>
@@ -161,7 +161,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -191,7 +191,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -201,7 +201,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -221,7 +221,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -231,7 +231,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -241,7 +241,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
@@ -251,7 +251,7 @@
                 <div class="card-body">
                   <h5 class="mt-3">Inovasi Sains Udayana 2025</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnyas</a>
+                  <a href="#" class="btn custom-button"  onclick= "window.location.href='lombaterbaru.html'">Baca Selengkapnya</a>
                 </div>
               </div>
             </div>
