--- a/lombaterbaru.html
+++ b/lombaterbaru.html
@@ -38,43 +38,8 @@
   <body>
     
   
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #283B8A ;">
-        <div class="container">
-          <a class="navbar-brand fw-bold" href="#">
-            <img src="img/Group (1).png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"> SIULAN
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
+  
 
-                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Bookmark</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Histori</a>
-              </li>
-              <li class="nav-item">
-
-               <a class="nav-link" href="#">Get Started</a> 
-
-                <button class="btn btn-primary" type="submit">Posting</button>
-              </li>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      
     <!-- Navbar -->
     <section>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #283B8A;">
@@ -88,20 +53,20 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item ">
-                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="home.html">Beranda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Tentang Kami.html">About</a>
+                <a class="nav-link" href="Tentang Kami.html">Tentang Kami</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Bookmark</a>
+                <a class="nav-link" href="#">Penanda</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Riwayat</a>
               </li>
               <li class="nav-item">
                 <!-- <a class="nav-link" href="#">Get Started</a> -->
-                <button class="btn custom-button ms-3" type="submit">Posting</button>
+                <button class="btn custom-button ms-3" type="submit">Unggah</button>
               </li>
               </li>
             </ul>
