hapus ndk penting

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
         <div
           class="col-md-6 d-flex flex-colum justify-content-center align-items-center bg-white text-dark p-4"
         >
-          <div class="text-center" style="width: 80%; max-width: 400px">
+          <div class="text-center">
             <h3 class="fw-bold">Masuk</h3>
             <!-- icon -->
             <div
