--- a/daftar.html
+++ b/daftar.html
@@ -20,7 +20,7 @@
         <div
           class="col-md-6 d-flex flex-colum justify-content-center align-items-center bg-white text-dark p-4"
         >
-          <div class="text-center" style="width: 80%; max-width: 400px">
+          <div class="text-center">
             <h3 class="fw-bold" href="login.html">Buat Akun</h3>
             <!-- icon -->
             <div
